// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PropertyDescription /> should render description 1`] = `
<div
  className="mfui-property-description"
>
  Boom, Yandex.Музыка, Zvooq, ВКонтакте Музыка
</div>
`;

exports[`<PropertyDescription /> should render hidden description 1`] = `
<div
  className="mfui-property-description"
>
  <span
    className="mfui-property-description__collapse"
    onClick={[Function]}
  >
    Подробнее
  </span>
  <Collapse
    className="mfui-property-description__content"
    classNameContainer="mfui-property-description__content-inner"
    isOpened={false}
  >
    Boom, Yandex.Музыка, Zvooq, ВКонтакте Музыка
  </Collapse>
</div>
`;

exports[`<PropertyDescription /> should render opened description 1`] = `
<div
  className="mfui-property-description"
>
  <span
    className="mfui-property-description__collapse"
    onClick={[Function]}
  >
    Скрыть
  </span>
  <Collapse
    className="mfui-property-description__content"
    classNameContainer="mfui-property-description__content-inner"
    isOpened={true}
  >
    Boom, Yandex.Музыка, Zvooq, ВКонтакте Музыка
  </Collapse>
</div>
`;

exports[`<PropertyDescription /> should render with custom toggle class 1`] = `
<div
  className="mfui-property-description"
>
  <span
    className="mfui-property-description__collapse toggle-custom-class"
    onClick={[Function]}
  >
    Подробнее
  </span>
  <Collapse
    className="mfui-property-description__content"
    classNameContainer="mfui-property-description__content-inner"
    isOpened={false}
  >
    Boom, Yandex.Музыка, Zvooq, ВКонтакте Музыка
  </Collapse>
</div>
`;

exports[`<PropertyDescription /> should render with data attribute 1`] = `
<div
  className="mfui-property-description"
>
  <span
    className="mfui-property-description__collapse"
    data-testid="moreLink-test"
    onClick={[Function]}
  >
    Подробнее
  </span>
  <Collapse
    className="mfui-property-description__content"
    classNameContainer="mfui-property-description__content-inner"
    isOpened={false}
  >
    Boom, Yandex.Музыка, Zvooq, ВКонтакте Музыка
  </Collapse>
</div>
`;
